If committed it will add Gridmanager.java, MainWindow.java, Map.java, MapGrid.java, map.png, and WildfireApp.java